--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -142,6 +142,12 @@
                                                 </a>
                                             </li>
                                             <li>
+                                                <a data-toggle="collapse" href="#whois">
+                                                    Whois
+                                                    <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
+                                                </a>
+                                            </li>
+                                            <li>
                                                 <a data-toggle="collapse" href="#dnsEnum">
                                                     DnsEnum
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
@@ -483,7 +489,7 @@
                     <div class="panel-heading">
                         <a data-toggle="collapse" href="#Server">
                             <strong>
-                                Server esterno
+                                SERVER ESTERNO
                             </strong>
                             <span class="caret"></span>
                         </a>
@@ -892,7 +898,7 @@
                                                 </div>
                                                 <a href="http://wapiti.sourceforge.net/wapiti.1.html" target="_blank">
                                                     <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                                    consulta il documentazione di Wapiti
+                                                    consulta la documentazione di Wapiti
                                                 </a>
                                             </div>
                                         </div>
@@ -999,7 +1005,7 @@
                                             <div clas="form-group row">
                                                 <a href="https://github.com/stanislav-web/OpenDoor" target="_blank">
                                                     <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                                    consulta il documentazione di Opendoor
+                                                    consulta la documentazione di Opendoor
                                                 </a>
                                             </div>
                                         </div>
@@ -1168,7 +1174,7 @@
                                             <div clas="form-group row">
                                                 <a href="https://github.com/m4ll0k/WAScan" target="_blank">
                                                     <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                                    consulta il documentazione di WASCAN
+                                                    consulta la documentazione di WASCAN
                                                 </a>
                                             </div>
                                         </div>
@@ -1266,7 +1272,7 @@
                                                 <div clas="form-group row">
                                                     <a href="https://github.com/droope/droopescan" target="_blank">
                                                         <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                                        consulta il documentazione di Droopescan
+                                                        consulta la documentazione di Droopescan
                                                     </a>
                                                 </div>
                                             </div>
@@ -1390,7 +1396,7 @@
                                                 <div clas="form-group row">
                                                     <a href="https://github.com/immunIT/drupwn" target="_blank">
                                                         <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                                        consulta il documentazione di Drupwn
+                                                        consulta la documentazione di Drupwn
                                                     </a>
                                                 </div>
                                             </div>
@@ -1470,7 +1476,7 @@
                                                 <div clas="form-group row">
                                                     <a href="https://github.com/rezasp/joomscan" target="_blank">
                                                         <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                                        consulta il documentazione di Joomscan
+                                                        consulta la documentazione di Joomscan
                                                     </a>
                                                 </div>
                                             </div>
@@ -1572,7 +1578,7 @@
                                                 <div clas="form-group row">
                                                     <a href="https://github.com/wpscanteam/wpscan" target="_blank">
                                                         <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                                        consulta il documentazione di Wpscan
+                                                        consulta la documentazione di Wpscan
                                                     </a>
                                                 </div>
                                             </div>
@@ -1705,7 +1711,7 @@
                                             <div clas="form-group row">
                                                 <a href="https://tools.kali.org/information-gathering/dnsrecon" target="_blank">
                                                     <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                                    consulta il documentazione di DnsRecon
+                                                    consulta la documentazione di DnsRecon
                                                 </a>
                                             </div>
                                         </div>
@@ -1798,7 +1804,7 @@
                                                 <div clas="form-group row">
                                                     <a href="https://github.com/mschwager/fierce" target="_blank">
                                                         <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
-                                                        consulta il documentazione di Fierce
+                                                        consulta la documentazione di Fierce
                                                     </a>
                                                 </div>
                                             </div>
@@ -1806,6 +1812,111 @@
                                             <div class="col-sm-6 text-right">
                                                 <div class="form-group row">
                                                     <input type="submit" asp-action="Create" asp-route-cosa="fierce" class="btn btn-default" value="Crea" />&nbsp;&nbsp; |
+                                                    <a asp-action="Index"> Torna alla lista</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-5">
+                <div class="panel panel-sidebar">
+                    <div class="panel-heading">
+                        <a data-toggle="collapse" href="#whois">
+                            <strong>
+                                WHOIS
+                            </strong>
+                            <span class="caret"></span>
+                        </a>
+                    </div>
+                    <div class="collapse col-5" id="whois">
+                        <div class="panel-body">
+                            <h4>
+                                <strong> Configura modulo </strong>
+                            </h4>
+                            <hr>
+                            <form asp-action="Create" name="whoisForm">
+                                <input type="hidden" asp-for="@Model.WHOIS.Applicazione" value="@webmva.Models.APPLICAZIONE.WHOIS" />
+                                <div class="col-sm-12">
+                                    <div class="col-sm-7" style="margin:0 auto; float:none">
+                                        <div class="form-group">
+                                            <h4 asp-for="@(Model.WHOIS.Nome)">Nome Modulo</h4>
+                                            <input class="form-control" asp-for="@(Model.WHOIS.Nome)" myName="checkCaratteri" id="whoisNome" />
+                                            <span class="text-danger" name="whoisNome" style="display:none"></span>
+                                        </div>
+                                    </div>
+                                    <hr />
+                                    <div class="col-sm-12">
+                                        <div class="col-sm-12">
+                                            <div class="col-sm-7" style="margin:0 auto; float:none">
+                                                <div class="form-group row">
+                                                    <h4 asp-for="@(Model.WHOIS.ComandoPersonalizzato)">Comando Personalizzato</h4>
+                                                    <input class="form-control" asp-for="@(Model.WHOIS.ComandoPersonalizzato)" />
+                                                </div>
+                                            </div>
+                                            <hr />
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <h4>Configurazione</h4>
+                                        <hr />
+                                        <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli il Server </label>
+                                            </div>
+                                            <div class="col-sm-1"></div>
+                                            <input type="text" class="col-sm-5" asp-for="@Model.WHOIS.HostWhois" placeholder="whois.ripe.net" />
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-4">
+                                                <label class="control-label">Scegli la Porta da usare per le richieste </label>
+                                            </div>
+                                            <div class="col-sm-1"></div>
+                                            <input type="text" class="col-sm-5" asp-for="@Model.WHOIS.PortaWhois" placeholder="43" />
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-6">
+                                                <label class="control-label">
+                                                    <input type="checkbox" asp-for="@Model.WHOIS.HideLegalWhois" /> Nascondi il disclaimer sulla legalità
+                                                </label>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <label class="control-label">
+                                                    <input type="checkbox" asp-for="@Model.WHOIS.SearchAllWhois" /> Ricerca in tutti i database collegati
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-6">
+                                                <label class="control-label">
+                                                    <input type="checkbox" asp-for="@Model.WHOIS.VerboseWhois" /> Aumenta la verbosità
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <hr />
+                                            <div class="col-sm-5">
+                                                <div clas="form-group row">
+                                                    <div clas="form-group row">
+                                                        <a href="https://github.com/rfc1036/whois" target="_blank">
+                                                            <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                                            sito
+                                                        </a>
+                                                    </div>
+                                                    <a href="https://www.mankier.com/1/whois.md" target="_blank">
+                                                        <span class="glyphicon glyphicon-info-sign" style="font-size:90%"></span>
+                                                        consulta la documentazione di Whois
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-1"></div>
+                                            <div class="col-sm-6 text-right">
+                                                <div class="form-group row">
+                                                    <input type="submit" asp-action="Create" asp-route-cosa="whois" class="btn btn-default" value="Crea" />&nbsp;&nbsp; |
                                                     <a asp-action="Index"> Torna alla lista</a>
                                                 </div>
                                             </div>
