--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -144,6 +144,12 @@
                                                 </a>
                                             </li>
                                             <li>
+                                                <a data-toggle="collapse" href="#whois">
+                                                    Whois
+                                                    <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
+                                                </a>
+                                            </li>
+                                            <li>
                                                 <a data-toggle="collapse" href="#dnsEnum">
                                                     DnsEnum
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
@@ -301,7 +307,7 @@
                     <div class="panel-heading">
                         <a data-toggle="collapse" href="#Server">
                             <strong>
-                                Server esterni
+                                SERVER ESTERNI
                             </strong>
                             <span class="caret"></span>
                         </a>
@@ -831,6 +837,54 @@
                                 </div>
                                 <tbody>
                                     @foreach (var item in Model.ModuliFIERCE)
+                                    {
+                                        <tr>
+                                            <td>
+                                                <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a>
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Comando)
+                                            </td>
+                                            <td>
+                                                <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
+                                                <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-5">
+                <div class="panel panel-sidebar">
+                    <div class="panel-heading">
+                        <a data-toggle="collapse" href="#whois">
+                            <strong>
+                                WHOIS
+                            </strong>
+                            <span class="caret"></span>
+                        </a>
+                    </div>
+                    <div class="collapse " id="whois">
+                        <div class="panel-body ">
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                Nome
+                                            </th>
+                                            <th>
+                                                Comando
+                                            </th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    @foreach (var item in Model.ModuliWHOIS)
                                     {
                                         <tr>
                                             <td>
