--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -743,6 +743,61 @@
                         </div>
                         <div class="panel panel-sidebar">
                             <div class="panel-heading">
+                                <a data-toggle="collapse" href="#whois">
+                                    <strong>
+                                        WHOIS
+                                    </strong>
+                                    <span class="caret"></span>
+                                </a>
+                            </div>
+                            <div class="collapse" id="whois">
+                                <div class="panel-body ">
+                                    <div class="col-sm-12">
+                                        <h4>Seleziona i moduli WHOIS</h4><hr />
+                                    </div>
+                                    <table class="table">
+                                        <div class="method">
+                                            <thead>
+                                                <tr>
+                                                    <th></th>
+                                                    <th>
+                                                        Nome
+                                                    </th>
+                                                    <th>
+                                                        Comando
+                                                    </th>
+                                                    <th>Target</th>
+                                                </tr>
+                                            </thead>
+                                        </div>
+                                        <tbody>
+                                            @for (int i = 0; i < Model.ListaModuliConTarget.Count; i++)
+                                            {
+                                                if (Model.ListaModuliConTarget[i].Applicazione != webmva.Models.APPLICAZIONE.WHOIS) { continue; }
+                                                <tr>
+                                                    <td>
+                                                        @Html.CheckBoxFor(model => model.ListaModuliConTarget[i].Inserito)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(model => model.ListaModuliConTarget[i].Nome)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
+                                                    </td>
+                                                    <td>
+                                                        @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new { placeholder = "es: example.org", @class = "col-md-10" })
+                                                        @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
+                                                        @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-sidebar">
+                            <div class="panel-heading">
                                 <a data-toggle="collapse" href="#dnsEnum">
                                     <strong>
                                         DNSENUM
