--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -100,6 +100,7 @@
                     <li>nmap</li>
                     <li>ruby</li>
                     <li>perl</li>
+                    <li>whois</li>
                     <li>Apache fop</li>
                     <li>wkhtmltopdf</li>
                     <li>Python 2 e 3 più pip per entrambi</li>
