Bugfix in Views/Modulo/Edit e rimozione messaggio di debug

--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -2879,7 +2879,7 @@
         <h2><em>Modifica modulo</em><strong> @(Model.WHOIS.Nome)</strong></h2>
         <hr />
         <form asp-action="Edit" name="whoisForm">
-            <input type="hidden" asp-for="@Model.WHOIS.Applicazione" value="@webmva.Models.WHOIS.DRUPWN" />
+            <input type="hidden" asp-for="@Model.WHOIS.Applicazione" value="@webmva.Models.APPLICAZIONE.WHOIS" />
             <input type="hidden" asp-for="@Model.WHOIS.ID" />
             <div class="row panel panel-default panel-body">
                 <div class="col-sm-12">
