--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -307,7 +307,7 @@
                     <div class="panel-heading">
                         <a data-toggle="collapse" href="#Server">
                             <strong>
-                                SERVER ESTERNI
+                                SERVER ESTERNO
                             </strong>
                             <span class="caret"></span>
                         </a>
