--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -114,7 +114,7 @@
                             <div class="panel panel-sidebar">
                                 <div class="panel-heading">
                                     <a data-toggle="collapse" href="#Server">
-                                        <strong>Server esterno</strong>
+                                        <strong>SERVER ESTERNO</strong>
                                         <span class="caret"></span>
                                     </a><br>
                                 </div>
